--- a/src/WebUI/package.json
+++ b/src/WebUI/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "nx",
-    "start": "nx serve web",
+    "start": "nx serve design-app",
     "start-host": "nx serve web --host=0.0.0.0 --port=4200 --disable-host-check",
     "start-web-ssl": "nx serve web --ssl",
     "start-no-ssl": "nx serve web --ssl false",
