fixing rerender issues

--- a/src/WebUI/libs/design-app/feature/tsconfig.json
+++ b/src/WebUI/libs/design-app/feature/tsconfig.json
@@ -3,6 +3,9 @@
     "target": "es2022",
     "useDefineForClassFields": false
   },
+	// "plugins": [
+	// 	{"name": "@angular/language-service"}
+	// ],
   "files": [],
   "include": [],
   "references": [
